SLCORE-800 Clean up deprecated classes and methods